First_Step/data/43/218/compilation.txt
IntegerProfile.java:35: error: not a statement
        for(int i=sizeTot;i<this.profile.length;i+j){
                                                 ^
1 error
